# icd10-entity-linkiing

./: .gitignore  CLAUDE.md  LICENSE  MANIFEST.in  README.md  example.sh  icd10_viewer.py  main.py  pyproject.toml
elinker/: cli.py  viewer.py
experiments/: 0-scratch.ipynb  0-scratch.py  1-load-mdace-splits.ipynb  1-make-mdace-splits.ipynb  2-medgemma-huggingface.ipynb  2-openai-test.ipynb  claude-test.ipynb  make-mdace-splits.ipynb  prompt_template.md.jinja2  prompt_template_tools.md.jinja2
experiments/results/test-run-1/: report.txt  scores.json
notebooks/: explore-mdace.ipynb  extract-diagnoses-recursive.ipynb  extract_diagnoses_recursive.py  query-graph.ipynb  test-claude.ipynb  test-icd10-api.ipynb  test.cypher
src/elinker/: __init__.py  cli.py  viewer.py
tests/: __init__.py  conftest.py  test_cli.py  test_integration.py  test_package.py  test_view_json.py
tests/fixtures/: invalid.json  sample.json
